GitHub workflow update

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image to ECR
 on:
   push:
     branches:
-      - DEVELOPMENT  # 🔁 Trigger on push to 'development' branch
+      - main  # 🔁 Trigger on push to 'main' branch
 
 permissions:
   id-token: write
@@ -20,14 +20,14 @@ jobs:
       - name: Configure AWS credentials from OIDC
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: arn:aws:iam::864899869180:role/CCD-LLT
-          role-session-name: CCD-LLT
+          role-to-assume: arn:aws:iam::849276828792:role/GitHubActionsOIDCRole
+          # role-session-name: CCD-LLT
           aws-region: ap-south-1
 
       - name: Login to Amazon ECR
         run: |
           aws ecr get-login-password --region ap-south-1 | \
-          docker login --username AWS --password-stdin 864899869180.dkr.ecr.ap-south-1.amazonaws.com
+          docker login --username AWS --password-stdin 849276828792.dkr.ecr.ap-south-1.amazonaws.com
 
       - name: Build Docker image
         run: |
@@ -35,8 +35,8 @@ jobs:
 
       - name: Tag Docker image
         run: |
-          docker tag ccd-llt-java-app:latest 864899869180.dkr.ecr.ap-south-1.amazonaws.com/ccd-llt-java-app:latest
+          docker tag ccd-llt-java-app:latest 849276828792.dkr.ecr.ap-south-1.amazonaws.com/ccd-llt-java-app:latest
 
       - name: Push Docker image to Amazon ECR
         run: |
-          docker push 864899869180.dkr.ecr.ap-south-1.amazonaws.com/ccd-llt-java-app:latest
+          docker push 849276828792.dkr.ecr.ap-south-1.amazonaws.com/ccd-llt-java-app:latest
