--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image to ECR
 on:
   push:
     branches:
-      - main  # 🔁 Trigger on push to 'main' branch
+      - main
 
 permissions:
   id-token: write
@@ -21,8 +21,12 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: arn:aws:iam::849276828792:role/GitHubActionsOIDCRole
-          # role-session-name: CCD-LLT
           aws-region: ap-south-1
+
+      - name: Ensure ECR repository exists
+        run: |
+          aws ecr describe-repositories --repository-names ccd-llt --region ap-south-1 || \
+          aws ecr create-repository --repository-name ccd-llt --region ap-south-1
 
       - name: Login to Amazon ECR
         run: |
